# nanostructure

./: .gitignore  Process.ipynb  README.md  atlas_MaP_count.py  igv.py  pyproject.toml  test_run.py
src/nanostructure/: __init__.py  cli.py  nanostructure.py  visualizer.py
src/nanostructure/components/: axis.py  gene.py  reads.py  title.py
src/nanostructure/config/: __init__.py  colors.py  coordinates.py  margins.py  title.py
src/nanostructure/core/: alignment.py  coordinates.py  layout.py  parsers.py  renderer.py
src/nanostructure/renderers/: vector.py
src/nanostructure/utils/: alignment_utils.py  coordinate_utils.py  drawing_utils.py
src/nanostructure/utils/coordinates/: __init__.py  base_coordinates.py  drawing_coordinates.py  gene_coordinates.py  image_renderer.py  scale.py
src/nanostructure/utils/drawing/: gene_drawer.py  track_drawer.py
src/nanostructure/utils/parsers/: gtf_parser.py
src/nanostructure/utils/renderers/: base_renderer.py  png_renderer.py  vector_renderer.py
